2013-07-02  Brian Holt  <brian.holt@samsung.com>

        [ATK] Leak: leaks in AccessibilityUIElement
        https://bugs.webkit.org/show_bug.cgi?id=118297

        Fixed memory leak.

        Reviewed by Christophe Dumez.

        * DumpRenderTree/atk/AccessibilityUIElementAtk.cpp:
        (AccessibilityUIElement::stringValue):

2013-07-02  Byungwoo Lee  <bw80.lee@samsung.com>

        Fix WebKitTestRunner crashes.
        https://bugs.webkit.org/show_bug.cgi?id=117630

        Reviewed by Darin Adler.

        Create static function to dump for WebProcess unresponsiveness status,
        and use it before calling TestController::runTest().

        Accessing TestController::m_currentInvocation before calling
        TestController::runTest() can make crash because the invocation
        instance will be assigned at the function.

        * WebKitTestRunner/TestController.cpp:
        (WTR::TestController::run):
        * WebKitTestRunner/TestInvocation.cpp:
        (WTR::TestInvocation::dumpWebProcessUnresponsiveness):
        * WebKitTestRunner/TestInvocation.h:

2013-07-02  Allan Sandfeld Jensen  <allan.jensen@digia.com>

        [Qt][WK1] Support WebGL with EGL on Linux
        https://bugs.webkit.org/show_bug.cgi?id=118251

        Reviewed by Kenneth Rohde Christiansen.

        * qmake/mkspecs/features/features.prf:

2013-07-01  Nick Diego Yamane  <nick.yamane@openbossa.org>

        [Efl][Gtk] Look at WEBKIT_OUTPUTDIR instead of WEBKITOUTPUTDIR in jhbuildrc
        https://bugs.webkit.org/show_bug.cgi?id=118267

        Reviewed by Gyuyoung Kim.

        After r152226 (from https://bugs.webkit.org/show_bug.cgi?id=117249)
        WEBKIT_OUTPUTDIR should be used instead of WEBKITOUPUTDIR. However
        Efl's jhbuildrc is still using the WEBKITOUTPUTDIR environment variable.

        * efl/jhbuildrc:
        * gtk/jhbuildrc:

2013-07-01  Gustavo Noronha Silva  <gustavo.noronha@collabora.com>

        [GTK] Remove unsupported AC backends