@@ -551,6 +551,14 @@
             "dtharp"
          ]
       },
+      "David Farler" : {
+         "emails" : [
+            "dfarler@apple.com"
+         ],
+         "nicks" : [
+            "dfarler"
+         ]
+      },
       "David Grogan" : {
          "emails" : [
             "dgrogan@chromium.org",
