@@ -1,3 +1,9 @@
+2013-07-02  David Farler  <dfarler@apple.com>
+
+        Unreviewed. Adding myself to contributors.json.
+
+        * Scripts/webkitpy/common/config/contributors.json:
+
 2013-07-02  Brian Holt  <brian.holt@samsung.com>
 
         [ATK] Leak: leaks in AccessibilityUIElement
